--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -7,7 +7,7 @@
     <%- include('../includes/navigation.ejs') %>
 
     <main>
-        <form class="login-form" action="" method="POST">
+        <form class="login-form" action="/auth/login" method="POST">
             <div class="form-control">
                 <label for="email">Email</label>
                 <input type="email" name="email" id="email">
