--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -16,6 +16,7 @@
                 <label for="password">Password</label>
                 <input type="password" name="password">
             </div>
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <button class="btn" type="submit">login</button>
         </form>
     </main>
