--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -38,6 +38,7 @@
                 <% }else { %>
             <li class="main-header__item">
                 <form action="/auth/logout" method="POST">
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                     <button type="submit" class="<%= path === '/login' ? 'active' : '' %>">Logout</button>
                 </form>
             </li>
@@ -80,6 +81,7 @@
         <% }else{ %>
             <li class="mobile-nav__item">
                 <form action="/auth/logout" method="POST">
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                     <button type="submit" class="btn">Logout</button>
                 </form>
             </li>
